add logo and take a photo feature
